--- a/k8s/v1-namespace.yaml
+++ b/k8s/v1-namespace.yaml
@@ -1,6 +1,6 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: super-api
+  name: the-economist-namespace
   labels:
-    name: super-api
+    name: the-economist-namespace
