--- a/helm-charts/Chart.yaml
+++ b/helm-charts/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-description: Microservice HelloWorld.
-name: api-python-helloworld
+description: service economist.
+name: the-economist
 sources:
-- https://github.com/ed00m/flask_api_rest_manifest
+- https://github.com/ed00m/the-economist
 version: 0.0.1
