--- a/k8s/v1-horizontalpodautoscaler.yaml
+++ b/k8s/v1-horizontalpodautoscaler.yaml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: api-python-helloworld
-  namespace: super-api
+  name: the-economist
+  namespace: the-economist-namespace
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: api-python-helloworld
+    name: the-economist
   minReplicas: 2
   maxReplicas: 10
   metrics:
