--- a/k8s/v1-ingress-NodePort.yaml
+++ b/k8s/v1-ingress-NodePort.yaml
@@ -1,9 +1,9 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: api-python-helloworld-nodeport
-  namespace: super-api
+  name: the-economist-nodeport
+  namespace: the-economist-namespace
 spec:
   backend:
-    serviceName: api-python-helloworld-nodeport
+    serviceName: the-economist-nodeport
     servicePort: 80
