--- a/k8s/v1-service-ClusterIP.yaml
+++ b/k8s/v1-service-ClusterIP.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-python-helloworld-clusterip
-  namespace: super-api
+  name: the-economist-clusterip
+  namespace: the-economist-namespace
 spec:
   selector:
-    app: api-python-helloworld
+    app: the-economist
   type: ClusterIP
   ports:
-  - name: api-python-helloworld-80
+  - name: the-economist-80
     port: 80
     targetPort: 8000
