--- a/k8s/v1-service-LoadBalancer-Internal.yaml
+++ b/k8s/v1-service-LoadBalancer-Internal.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-python-helloworld-loadbalancer-internal
-  namespace: super-api
+  name: the-economist-loadbalancer-internal
+  namespace: the-economist-namespace
   annotations:
     cloud.google.com/load-balancer-type: "Internal"
 spec:
   selector:
-    app: api-python-helloworld
+    app: the-economist
   type: LoadBalancer
   ports:
-  - name: api-python-helloworld-80
+  - name: the-economist-80
     port: 80
     targetPort: 8000
