--- a/k8s/v1-service-NodePort.yaml
+++ b/k8s/v1-service-NodePort.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-python-helloworld-nodeport
-  namespace: super-api
+  name: the-economist-nodeport
+  namespace: the-economist-namespace
 spec:
   selector:
-    app: api-python-helloworld
+    app: the-economist
   type: NodePort
   ports:
-  - name: api-python-helloworld-80
+  - name: the-economist-80
     port: 80
     targetPort: 8000
