[fix] Upgrade dependences Environment 3.7 to 3.8

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,6 @@
 Flask==1.0.2
 telepot==12.7
-requests==2.21.0
+requests==2.24.0
 google-cloud-logging==1.12.1
 requests-cache==0.5.2
-faker
+Faker==4.1.1
